--- a/src/app/modules/recruitment/email-otpverify/email-otpverify.component.html
+++ b/src/app/modules/recruitment/email-otpverify/email-otpverify.component.html
@@ -5,7 +5,7 @@
                 <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
                   <div style="display: flexbox; flex-direction: row; align-items: center;">
                     <span class="header-label">Verify your account</span>
-                    <span class="subheader-label">A verification code was sent to {{ applicantEmail }}. Enter the code to continue.</span>
+                    <span class="subheader-label">A verification code was sent to your email. Enter the code to continue.</span>
                   </div>
                   <div style="padding: 15px;"></div>
                     <div class="px-2">
@@ -43,7 +43,7 @@
               <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
                 <div style="display: flexbox; flex-direction: row; align-items: center;">
                   <span class="header-label">Verify your account</span>
-                  <span class="subheader-label">A verification code was sent to 0805647****</span>
+                  <span class="subheader-label">A verification code was sent to your number</span>
                    <span class="subheader-label">Enter the code to continue.</span>
                 </div>
                 <div style="padding: 15px;"></div>
