--- a/src/app/modules/career-succession/profile-details/profile-details.component.html
+++ b/src/app/modules/career-succession/profile-details/profile-details.component.html
@@ -36,7 +36,7 @@ Create Succession
 </ngx-componentsheader>
 
 <div style="display: flex; flex-direction: row; justify-content: flex-start; flex: auto; padding-bottom: 5px;">
-  <span><i class="far fa-arrow-alt-circle-left"></i><a (click)="goback()" style="margin-left: 3px;cursor: pointer;">Back</a></span>
+  <span><a (click)="goback()"><i class="far fa-arrow-alt-circle-left" style="margin-right: 3px;cursor: pointer;"></i>Back</a></span>
 </div>
 <div>
   <nb-card>
