--- a/src/app/modules/career-succession/talent-pool/talent-pool.component.html
+++ b/src/app/modules/career-succession/talent-pool/talent-pool.component.html
@@ -12,7 +12,7 @@
 
 </div>
 
-<div *ngIf="allPoolCounter > 0 && newPool == true">
+<!-- <div *ngIf="allPoolCounter > 0 && newPool == true">
   <nb-card>
     <nb-card-body>
       <form>
@@ -54,10 +54,10 @@
       </form>
     </nb-card-body>
   </nb-card>
-</div>
+</div> -->
 
 
-<div *ngIf="allPoolCounter > 0 && newPool == false">
+<div *ngIf="allPoolCounter > 0">
       <nb-card *ngFor="let pool of allTalentPools" class="cardTitle">
         <nb-card-header>
           <div style="display: flex; flex-direction: row; justify-content: space-between;">
@@ -83,20 +83,105 @@
       </nb-card>
 </div>
 
-<!--
-<ngx-side-modal *ngFor="let pool of allTalentPool" [(show)]='viewPoolModal' style="width: 500px;">
-  <div modal-header>{{pool.title}}</div>
+<ngx-side-modal [(show)]="newPool">
+  <div modal-header>Update Talent Pool</div>
   <div modal-body>
+    <nb-card>
+      <nb-card-body>
+        <form>
+          <div class="form-group row mydiv">
+            <div class="col">
+              <label>Title</label>
+              <input type="text" class="form-control" name="title" #title="ngModel" [(ngModel)]="poolData.title" placeholder="Pool Title">
+            <div *ngIf="title.invalid && (title.dirty || title.touched)" class="error">
+              <div *ngIf="title.errors.required">Title is required</div>
+            </div>
+          </div>
+          </div>
+
+          <div class="form-group row mydiv">
+              <div class="col">
+                <label>Description</label>
+                <textarea name="description" #description="ngModel" cols="30" rows="10" [(ngModel)]="poolData.description" style="width: 100%;"></textarea>
+            </div>
+          </div>
+
+          <div class="form-group row mydiv">
+              <div class="col">
+                <label>Competency</label>
+                <select class="form-control" name="competency" #competency="ngModel" [(ngModel)]="poolData.competencyId">
+                  <option value="">--Select Comptency--</option>
+                  <option *ngFor="let myCompetency of allCompetencies" [(value)]="myCompetency.id">{{ myCompetency.competencyTitle }}</option>
+                </select>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <div class="col">
+              <button *ngIf="!btnProcessing" nbButton status="primary" (click)="updateTalentPool()">Update</button>
+              <button *ngIf="btnProcessing" nbButton status="primary">Processing... &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
+              <span style="padding: 8px;"></span>
+              <button nbButton style="color: #4847E0;" (click)="addNewPool()">Cancel</button>
+            </div>
+          </div>
+        </form>
+      </nb-card-body>
+  </nb-card>
 
   </div>
 
-  <div modal-actions class="d-flex mb-5">
-      <button nbButton status="primary" class="d-flex column">Submit</button>
-      <button nbButton outline status="primary" class="d-flex column">Discard</button>
-      <button class="d-flex column Attach">
-          <img class="icon" src="assets/icons/attach.jpg" style="height: 30px; margin-left: 20px;margin-right: 10px;">
-          Attach</button>
+
+
+</ngx-side-modal>
+
+<ngx-side-modal [(show)]="newPool">
+  <div modal-header>Create Talent Pool</div>
+  <div modal-body>
+    <nb-card>
+      <nb-card-body>
+        <form>
+          <div class="form-group row mydiv">
+            <div class="col">
+              <label>Title</label>
+              <input type="text" class="form-control" name="title" #title="ngModel" [(ngModel)]="poolModel.title" placeholder="Pool Title">
+            <div *ngIf="title.invalid && (title.dirty || title.touched)" class="error">
+              <div *ngIf="title.errors.required">Title is required</div>
+            </div>
+          </div>
+          </div>
+
+          <div class="form-group row mydiv">
+              <div class="col">
+                <label>Description</label>
+                <textarea name="description" #description="ngModel" cols="30" rows="10" [(ngModel)]="poolModel.description" style="width: 100%;"></textarea>
+            </div>
+          </div>
+
+          <div class="form-group row mydiv">
+              <div class="col">
+                <label>Competency</label>
+                <select class="form-control" name="competency" #competency="ngModel" [(ngModel)]="poolModel.competencyId">
+                  <option value="">--Select Comptency--</option>
+                  <option *ngFor="let myCompetency of allCompetencies" [(value)]="myCompetency.id">{{ myCompetency.competencyTitle }}</option>
+                </select>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <div class="col">
+              <button *ngIf="!btnProcessing" nbButton status="primary" (click)="createTalentPool()">Update</button>
+              <button *ngIf="btnProcessing" nbButton status="primary">Processing... &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
+              <span style="padding: 8px;"></span>
+              <button nbButton style="color: #4847E0;" (click)="addNewPool()">Cancel</button>
+            </div>
+          </div>
+        </form>
+      </nb-card-body>
+  </nb-card>
 
   </div>
-  <div style="margin-top: 15px;"></div>
-</ngx-side-modal> -->
+
+
+
+</ngx-side-modal>
+
