--- a/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
+++ b/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
@@ -119,7 +119,16 @@
                   <label>Account Number</label>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6">
-                  <input type="number" class="form-control" name="accountNo" minlength="10" maxlength="10" #accountNo="ngModel" [(ngModel)]="disbursement.accountNumber" placeholder="Enter account number" required>
+                  <input type="text" class="form-control" name="accountNo" #accountNo="ngModel" [(ngModel)]="disbursement.accountNumber" placeholder="Enter account number" required>
+                </div>
+              </div>
+
+              <div class="form-group row" style="margin-top: 20px">
+                <div class="col-sm-2 col-md-2 col-lg-2">
+                  <label></label>
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                  <nb-checkbox status="basic" (checkedChange)="verifyAccountNumber($event)">Verify Account Number</nb-checkbox>
                 </div>
               </div>
 
@@ -128,11 +137,11 @@
                   <label>Account Name</label>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6">
-                  <input type="text" class="form-control" name="accountName" #accountName="ngModel" [(ngModel)]="disbursement.accountName" placeholder="Enter Account Name">
+                  <input type="text" class="form-control" name="accountName" #accountName="ngModel" [(ngModel)]="disbursement.accountName" placeholder="Enter Account Name" readonly>
                 </div>
-                <div *ngIf="accountName.invalid && (accountName.dirty || accountName.touched)" class="error">
+                <!-- <div *ngIf="accountName.invalid && (accountName.dirty || accountName.touched)" class="error">
                   <div *ngIf="accountName.errors.required">Account Name is required</div>
-                </div>
+                </div> -->
               </div>
 
             </div>
