--- a/src/app/modules/expense/expense-group/expense-group.component.html
+++ b/src/app/modules/expense/expense-group/expense-group.component.html
@@ -15,4 +15,7 @@
   [loading]="loading"
   [tableActions]="tableActions"
   (tableActionClicked)="tableActionClick($event)"
+  (filterChange)="filterUpdated($event)"
+  [showActions]="false"
+  [showFilter]="true"
 ></ngx-page>
