--- a/src/app/modules/expense/expense-project/expense-project.component.html
+++ b/src/app/modules/expense/expense-project/expense-project.component.html
@@ -16,5 +16,8 @@
   [loading]="loading"
   [tableActions]="tableActions"
   (tableActionClicked)="tableActionClick($event)"
+  (filterChange)="filterUpdated($event)"
+  [showActions]="false"
+  [showFilter]="true"
 >
 </ngx-page>
