--- a/src/app/modules/career-succession/testpool/testpool.component.html
+++ b/src/app/modules/career-succession/testpool/testpool.component.html
@@ -274,13 +274,13 @@
         <div class="form-group row mydiv">
           <div class="col">
             <i class="fa fa-download" style="color: #4847E0; padding: 10px;" aria-hidden="true"></i>
-            <span style="color: #4847E0; padding: 10px;">Download Template</span>
+            <a href="assets/download/TalentPoolTemplate.xlsx" target="_blank" download="TalentPoolTemplate.xlsx" style="color: #4847E0; padding: 10px;">Download Template</a>
           </div>
         </div>
 
         <div class="form-group row" style="display: flex; flex-direction: row; justify-content: space-between; align-items:unset;">
           <div class="col-md-4">
-            <button nbButton status="primary">Save</button>
+            <button nbButton status="primary" (click)="bulkAdd()">Save</button>
           </div>
 
           <div class="col-md-4">
