--- a/src/app/modules/expense/expense-management/expense-management.component.html
+++ b/src/app/modules/expense/expense-management/expense-management.component.html
@@ -24,6 +24,9 @@
       [userData]="tableData"
       [loading]="loading"
       (pageChange)="loadNewPage($event)"
+      (filterChange)="filterUpdated($event)"
+      [showActions]="false"
+      [showFilter]="true"
     ></ngx-tablecomponent>
   </div>
 </ng-template>
@@ -225,7 +228,7 @@
           </div>
         </div>
 
-        <div class="form-group row"> 
+        <div class="form-group row">
           <label class="col-sm-3" for="Name" class="col-sm-3"
             >Reference Id</label
           >
