--- a/src/app/modules/expense/expense-request/expense-request.component.html
+++ b/src/app/modules/expense/expense-request/expense-request.component.html
@@ -15,5 +15,8 @@
   [loading]="loading"
   [tableActions]="tableActions"
   (tableActionClicked)="tableActionClick($event)"
+  (filterChange)="filterUpdated($event)"
+  [showActions]="false"
+  [showFilter]="true"
 >
 </ngx-page>
