--- a/src/app/modules/disciplinary-management/pages/disciplinary-management-log/disciplinary-management-log.component.html
+++ b/src/app/modules/disciplinary-management/pages/disciplinary-management-log/disciplinary-management-log.component.html
@@ -32,55 +32,64 @@
 
 
 <ngx-side-modal [(show)]='showtypeDetails' [position]="'Center'" style="width: 500px; height: 1000px;">
-  <div modal-header>{{pageName}}</div>
+  <div modal-header>
+    <div style="display: flex;flex-direction: row;">
+<div style="flex:auto">{{pageName}} - {{viewDisciplineManagementDTO.disciplinaryTypeName}}</div>
+<div>
+  <i class="fa fa-times" style="color: red;cursor: pointer;" (click)="showtypeDetails = false;getallLog();"></i>
+</div>
+    </div>
+  
+  </div>
   <div modal-body>
-    <div class="row">
+    <ngx-default-content
+    *ngIf="loadingSingleDisciplin"
+    [pageHeader]="pageName"
+    pageDescription="No Record Found"
+    [loading]="loadingSingleDisciplin"
+  >
+  </ngx-default-content>
+
+    <div class="row" *ngIf="!loadingSingleDisciplin">
       <div class="col-sm-3">
 <div style="display: flex;flex-direction: row;">
-  <img src="assets/icons/camera.jpg" style="width: 35px;">
+  <img [src]="viewDisciplineManagementDTO.employeeProfilePic" onError="this.src='assets/icons/camera.jpg'" style="width: 35px;">
 <div style="display: flex;flex-direction: column;padding-left: 10px;">
-  <div style="font-weight: bolder;">Terry Apala</div>
-  <div>Terryboy@company.com</div>
+  <div style="font-weight: bolder;">{{viewDisciplineManagementDTO.employeeName}}</div>
+  <div>{{viewDisciplineManagementDTO.employeeName}}</div>
 
 </div>
 </div>
       </div>
       <div class="col-sm-9">
         <div style="display: flex;flex-direction: column;">
-          <div style="display: flex;justify-content: flex-end;">{{"11-06-2021"| date:'MMM d, y'}}</div>
-          <div style="padding: 15px 5px 15px 5px;">
-            <p>
-              it has been long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, a
+          <div style="display: flex;justify-content: flex-end;">{{viewDisciplineManagementDTO.dateSent| date:'MMM d, y'}}</div>
+          <div style="padding: 15px 5px 15px 5px;" [innerHTML]="viewDisciplineManagementDTO.letterContent">
 
-As opposed to using 'Content here, content here', making it look like readable English.
-            </p>
-            <p>
-              it has been long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, a
-
-As opposed to using 'Content here, content here', making it look like readable English.
-            </p>
           </div>
           <div style="display: flex;flex-direction: row;color: #6b6bdb;">
-            <div style="padding: 10px 10px 10px 0"> <a status="primary" style="text-decoration: underline;cursor: pointer;">Reply</a> </div>
-            <div style="padding:  10px 10px 10px 0;"><a status="primary" style="text-decoration: underline;cursor: pointer;">Mark as closed</a></div>
+            <div style="padding: 10px 10px 10px 0"> <a (click)="responseToggle = !responseToggle" status="primary" style="text-decoration: underline;cursor: pointer;">
+            <span   *ngIf="isUser">Reply</span>  <span   *ngIf="!isUser">View Response</span>
+            </a> </div>
+            <div style="padding:  10px 10px 10px 0;"><a (click)="viewDisciplineManagementDTO.status = 2;processResponse()" *ngIf="!isUser" status="primary" style="text-decoration: underline;cursor: pointer;">Mark as closed</a></div>
            
             
           </div>
-          <div>
+          <div *ngIf="responseToggle">
             <div class="row">
               <div class="col-sm-12">
-                <textarea rows="5" nbInput fullWidth></textarea>
+                <textarea #response="ngModel" name="response" id="response" [(ngModel)]="viewDisciplineManagementDTO.response" rows="5" nbInput fullWidth [readonly]="!isUser"></textarea>
               </div>
             </div>
-            <div class="row" style="padding-top: 15px;">
+            <div class="row" style="padding-top: 15px;" *ngIf="isUser">
               <div class="col-sm-12">
                <div style="display: flex;flex-direction: row;">
                 <div >
-                  <button   nbButton status="primary" class="d-flex column" >Send </button>
+                  <button [disabled]="!viewDisciplineManagementDTO.response" (click)="processResponse()"  nbButton status="primary" class="d-flex column" >Send </button>
                
                 </div>
                 <div style="padding-left: 15px;">
-                  <button  outline="true" nbButton status="primary" class="d-flex column" > Discard</button>
+                  <button (click)="showtypeDetails = false;getallLog();" outline="true" nbButton status="primary" class="d-flex column" > Discard</button>
                
                 </div>
               </div>
