--- a/src/app/components/cal/cal.component.html
+++ b/src/app/components/cal/cal.component.html
@@ -6,13 +6,13 @@
             <nb-actions size="medium">
                 <nb-action>{{monthLabel}} - {{year}}</nb-action>
                 <nb-action (click)="prevMonth()" icon="arrow-ios-back-outline"></nb-action>
-             
-            
+
+
                 <nb-action icon="arrow-ios-forward-outline" (click)="nextMonth()"></nb-action>
                 <nb-action (click)="gotoThisMonth()" style="cursor: pointer;">Today</nb-action>
-              </nb-actions>  
-        
-        
+              </nb-actions>
+
+
         </div>
        <table class="calendar">
 <thead>
@@ -24,7 +24,7 @@
 </thead>
 <tbody>
     <tr *ngFor="let week of weeks">
-        <td *ngFor="let day of week" 
+        <td *ngFor="let day of week"
         [class]="{'other-month': day.getMonth() !== month, today: day.isToday, selectedDay: day == selectedDay}"
         class="calendar__day__cell" (click)='dateClicked(day)'>
              <div style="padding-left: 15px; display: flex;flex-direction: column;">{{day.getDate()}}</div>
@@ -37,37 +37,38 @@
        </table>
 
         <table style="padding: 2rem; margin-top: 2rem;  border-collapse: collapse; border-spacing: 0; font-size: 1em; ">
-      
+
             <tbody>
             <tr>
                 <td colspan="10">
                     <button nbButton [nbPopover]="selectedDay"></button>
                     <div class="row " *ngIf='selectedDay'>
-                      
+
                         <div class="col s12 m6">
-                            <div style="display: flex; text-align: center; justify-content: center; font-size: larger; font-weight: bold;
+                            <!-- <div style="display: flex; text-align: center; justify-content: center;
                                     margin-top: 2rem;margin-bottom: 2rem;">
                                 Created Events
-                            </div>
-                            <table class="responsive-table">
-                                <thead>
-
+                            </div> -->
+                            <h6>Event Details</h6>
+                            <table class="table">
+                                <thead style="color: #fff; background-color: #4847E0;
+                                ;">
                                     <tr>
-                                        <th>Title</th>
-                                        <th>Start Date</th>
-                                        <th>End Date</th>
-                                        <th>Description</th>
-
+                                        <th scope="col">Title</th>
+                                        <th scope="col">Start Date</th>
+                                        <th scope="col">End Date</th>
+                                        <th scope="col">Description</th>
+                                        <th scope="col">Action</th>
                                     </tr>
 
 
                                 </thead>
 
                                 <tbody>
-                                  
 
-                                    <tr *ngFor='let event of selectedDay.events; index as i' style="padding: 0.5rem;">
-                                        <td style="margin-right: 0.5rem;">
+
+                                    <tr *ngFor='let event of selectedDay.events; index as i' scope="row">
+                                        <td>
                                             {{event.title}}
 
                                         </td>
@@ -82,10 +83,12 @@
                                         <td>
                                             {{event.description}}
                                         </td>
-                                        <a class="action-btn">
+                                        <td>
+                                          <a class="action-btn">
                                             <i class="far fa-trash-alt" style="cursor: pointer; "
                                                 (click)="deleteEvent(event.id)"></i>
                                         </a>
+                                        </td>
                                     </tr>
 
 
