--- a/src/app/components/custom-form/custom-form.component.html
+++ b/src/app/components/custom-form/custom-form.component.html
@@ -10,10 +10,11 @@
                 <input class="form-control" type='number' *ngIf="field.type===FIELD_TYPES.number" [(ngModel)]="data[field.name]" [name]="field.name"/>
                 <ngx-date [(value)]="data[field.name]" *ngIf="field.type===FIELD_TYPES.date"></ngx-date>
                 <ngx-file-upload *ngIf="field.type===FIELD_TYPES.file" [(value)]="data[field.name]"></ngx-file-upload>
-                <ngx-wysisyg-input *ngIf="field.type===FIELD_TYPES.wysiwyg" [(value)]="data[field.name]"></ngx-wysisyg-input>
+                <ngx-wysisyg-input *ngIf="field.type===FIELD_TYPES.textarea" [(value)]="data[field.name]"></ngx-wysisyg-input>
                 <ngx-radio-button [(value)]="data[field.name]" [items]="field.selectOptions"></ngx-radio-button>
                 <ngx-date-range *ngIf="field.type===FIELD_TYPES.date_range" [(value)]="data[field.name]"></ngx-date-range>
                 <ngx-employee-master-search *ngIf="field.type===FIELD_TYPES.employee" [(value)]="data[field.name]" [allowmultipleselection]="!field.singleSelection" (valueChange)="employeeChange(field, $event)"></ngx-employee-master-search>
+                <a href="" *ngIf="field.type===FIELD_TYPES.select">Ridwan</a>
                 <ngx-multi-select *ngIf="field.type===FIELD_TYPES.select" [(value)]="tempData[field.name]" (valueChange)="selectChange(field, $event)" [choice_name]="field.choice_name"
                     [singleSelection]="field.singleSelection" [dropdown_id]="field.dropDownId"></ngx-multi-select>
                 <div *ngIf="errors && errors[field.name]">
