--- a/src/app/modules/career-succession/testpool/testpool.component.html
+++ b/src/app/modules/career-succession/testpool/testpool.component.html
@@ -280,7 +280,7 @@
 
         <div class="form-group row" style="display: flex; flex-direction: row; justify-content: space-between; align-items:unset;">
           <div class="col-md-4">
-            <button nbButton status="primary" (click)="bulkAdd()">Save</button>
+            <button nbButton status="primary" (click)="uploadBulkEmployee()">Save</button>
           </div>
 
           <div class="col-md-4">
