--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -22,6 +22,7 @@
       <nb-search type="rotate-layout"></nb-search>
     </nb-action> -->
     <!-- <nb-action class="control-item" icon="email-outline"></nb-action> -->
+    <ng-content select="[headerActions]"> </ng-content>
     <nb-action class="control-item" >
       <nb-icon icon="bell-outline"></nb-icon>
     </nb-action>
