--- a/src/app/modules/recruitment/applicants-page/applicants-page.component.html
+++ b/src/app/modules/recruitment/applicants-page/applicants-page.component.html
@@ -1,3 +1,3 @@
-<ngx-new-single-column-header-layout>
+<ngx-new-single-column-header-layout [actionsList]="actionsList" (headerClick)="actionHeaderClick($event)">
   <router-outlet></router-outlet>
 </ngx-new-single-column-header-layout>
