Updated applicant profile

--- a/src/app/modules/recruitment/applicant-profile/applicant-profile.component.html
+++ b/src/app/modules/recruitment/applicant-profile/applicant-profile.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="container">
-    <ngx-componentsheader [pageName]="pageTitle" [requiredButton]="rbutton" (buttonClick)="getbtnaction($event)"></ngx-componentsheader>
+    <ngx-componentsheader [pageName]="pageTitle"></ngx-componentsheader>
 
     <!-- Main Card -->
     <nb-card>
